kubernetes/apps/gitea/ingresses/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/cluster-issuer: iam-demo-certs-issuer
  name: gitea-ingress
  namespace: tools
spec:
  rules:
  - host: git.iam-demo.test
    http:
      paths:
      - backend:
          service:
            name: gitea
            port:
              number: 3000
        path: /
        pathType: Prefix
  # tls:
  # - hosts:
  #   - git.iam-demo.test
  #   secretName: iam-demo-gitea-tls
